fix login_admin swagger
