# api/docs/swagger.json
@@ -332,7 +332,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/models_v1.LoginRequest"
+                            "$ref": "#/definitions/models_v1.LoginAdminRequest"
                         }
                     }
                 ],
@@ -2057,6 +2057,21 @@
                     "type": "string"
                 },
                 "parent_id": {
+                    "type": "string"
+                }
+            }
+        },
+        "models_v1.LoginAdminRequest": {
+            "type": "object",
+            "required": [
+                "login",
+                "password"
+            ],
+            "properties": {
+                "login": {
+                    "type": "string"
+                },
+                "password": {
                     "type": "string"
                 }
             }
